--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    <dimen name="login_horizontal_margin">20dp</dimen>
+    <dimen name="login_vertical_margin">20dp</dimen>
+    <dimen name="login_main_margin_top">50dp</dimen>
+    <dimen name="login_password_margin_top">10dp</dimen>
+    <dimen name="login_signin_button_margin_top">16dp</dimen>
+    
+    <dimen name="login_font_account">16sp</dimen>
+    <dimen name="login_font_password">16sp</dimen>
+    <dimen name="login_font_button">18sp</dimen>
+    <dimen name="login_font_text_regist">16sp</dimen>
 
 </resources>
