--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,10 +9,16 @@
     <dimen name="login_main_margin_top">50dp</dimen>
     <dimen name="login_password_margin_top">10dp</dimen>
     <dimen name="login_signin_button_margin_top">16dp</dimen>
+
+    <dimen name="session_list_item_padding">8dp</dimen>
     
     <dimen name="login_font_account">16sp</dimen>
     <dimen name="login_font_password">16sp</dimen>
     <dimen name="login_font_button">18sp</dimen>
     <dimen name="login_font_text_regist">16sp</dimen>
+    
+    <dimen name="session_list_item_title">16sp</dimen>
+    <dimen name="session_list_item_content">14sp</dimen>
+    <dimen name="session_list_item_time">12sp</dimen>
 
 </resources>
