--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,10 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.testyulongapp.MainActivity" >
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_exit"
+        android:title="@string/action_exit"
+        android:showAsAction="never"/>
 
 </menu>
