添加公共的菜单

--- a/res/layout/layout_tab_view.xml
+++ b/res/layout/layout_tab_view.xml
@@ -18,8 +18,7 @@
         android:id="@+id/tab_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:padding="2dp"
-        android:gravity="center_horizontal|bottom"
+        android:gravity="center"
         android:textColor="@color/tab_text_selector"
-        android:textSize="12sp"/>
+        android:textSize="@dimen/main_fun_item_title"/>
 </LinearLayout>
