--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -17,6 +17,8 @@
     <dimen name="login_font_button">18sp</dimen>
     <dimen name="login_font_text_regist">16sp</dimen>
     
+    <dimen name="main_fun_item_title">12sp</dimen>
+    
     <dimen name="session_list_item_title">16sp</dimen>
     <dimen name="session_list_item_content">14sp</dimen>
     <dimen name="session_list_item_time">12sp</dimen>
