--- a/res/layout/item_session.xml
+++ b/res/layout/item_session.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/session_list_item_padding" >
+    android:padding="@dimen/list_item_padding" >
     
     <ImageView 
         android:id="@+id/iv_head_icon"
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginLeft="@dimen/session_list_item_padding"
-        android:layout_marginStart="@dimen/session_list_item_padding"
+        android:layout_marginLeft="@dimen/list_item_padding"
+        android:layout_marginStart="@dimen/list_item_padding"
         android:layout_toRightOf="@id/iv_head_icon"
         android:layout_toEndOf="@id/iv_head_icon"
         android:layout_toStartOf="@id/tv_time"
