--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -75,5 +75,14 @@
         <item name="android:background">@android:color/white</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+    
+    <!-- 公用小按钮的样式 -->
+    <style name="CommonSmallButtonstyle">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:background">@drawable/common_button_selector</item>
+		<item name="android:textColor">@android:color/white</item>
+    </style>
 
 </resources>
