--- a/res/layout/item_session.xml
+++ b/res/layout/item_session.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/list_item_padding" >
+    android:padding="@dimen/list_item_padding"
+    android:descendantFocusability="blocksDescendants" >
     
     <ImageView 
         android:id="@+id/iv_head_icon"
