--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -78,11 +78,18 @@
     
     <!-- 公用小按钮的样式 -->
     <style name="CommonSmallButtonstyle">
-		<item name="android:layout_width">wrap_content</item>
-		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_width">@dimen/common_button_width</item>
+		<item name="android:layout_height">@dimen/common_button_height</item>
 		<item name="android:gravity">center</item>
 		<item name="android:background">@drawable/common_button_selector</item>
 		<item name="android:textColor">@android:color/white</item>
+    </style>
+    
+    <style name="CommonListViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+        <item name="android:listSelector">@drawable/common_list_selector</item>
     </style>
 
 </resources>
