--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,7 +7,23 @@
         android:icon="@drawable/abc_ic_search"
         android:showAsAction="ifRoom"/>
     
-    <item 
+   	<item
+        android:id="@+id/action_create_group_chat"
+        android:title="@string/action_create_group_chat"
+        android:icon="@drawable/abc_ic_group_chat"
+        android:showAsAction="withText"/>
+    <item
+        android:id="@+id/action_add_friend"
+        android:title="@string/action_add_friend"
+        android:icon="@drawable/abc_ic_add_friend"
+        android:showAsAction="withText"/>
+    <item
+        android:id="@+id/action_exit"
+        android:title="@string/action_exit"
+        android:icon="@drawable/abc_ic_exit"
+        android:showAsAction="withText"/>
+    
+    <!-- <item 
         android:id="@+id/action_plus"
         android:title="@string/action_plus"
         android:icon="@drawable/abc_ic_plus"
@@ -17,17 +33,17 @@
 		        android:id="@+id/action_create_group_chat"
 		        android:title="@string/action_create_group_chat"
 		        android:icon="@drawable/abc_ic_group_chat"
-		        android:showAsAction="withText"/>
+		        android:showAsAction="collapseActionView"/>
 	        <item
 		        android:id="@+id/action_add_friend"
 		        android:title="@string/action_add_friend"
 		        android:icon="@drawable/abc_ic_add_friend"
-		        android:showAsAction="withText"/>
+		        android:showAsAction="collapseActionView"/>
 		    <item
 		        android:id="@+id/action_exit"
 		        android:title="@string/action_exit"
 		        android:icon="@drawable/abc_ic_exit"
-		        android:showAsAction="withText"/>
+		        android:showAsAction="collapseActionView"/>
 	    </menu>
-	</item>
+	</item> -->
 </menu>
