--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.DeviceDefault.Light">
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -16,6 +16,21 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="vpiTabPageIndicatorStyle">@style/FuncTabView</item>
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
+    </style>
+    
+    <style name="AppTheme.MainActivity" parent="AppTheme">
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow.MainActivty</item>
+    </style>
+    
+    <!-- 系统默认的action overflow样式 -->
+    <style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/abc_ic_menu_moreoverflow_normal_holo_dark</item>
+    </style>
+    
+    <!-- 主界面的action overflow样式 -->
+    <style name="MyActionButtonOverflow.MainActivty">
+        <item name="android:src">@drawable/abc_ic_plus_normal</item>
     </style>
     
     <!-- 注册、登录界面父布局的样式 -->
