--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="session_list_item_time">#99888888</color>
     
     <color name="list_selector">#26999999</color>
+    
+    <color name="divider_color">#aaaaaa</color>
 </resources>
