--- a/res/layout/fragment_contact.xml
+++ b/res/layout/fragment_contact.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white" >
-	<TextView 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:text="好友列表"/>    
+    <ListView
+        android:id="@+id/lv_contact"
+        style="@style/CommonListViewStyle" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_text_dialog"
+        android:layout_width="@dimen/contact_text_index_width"
+        android:layout_height="@dimen/contact_text_index_height"
+        android:layout_gravity="center"
+        android:background="@drawable/text_index_background"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/contact_text_index"
+        android:visibility="gone" />
+
+    <com.example.chat.view.SideBar
+        android:id="@+id/sidrbar"
+        android:layout_width="@dimen/contact_sidebar_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="end|center" />
+
+</FrameLayout>
