添加了用户名片实体，初步构建数据库

--- a/res/drawable/sidebar_background.xml
+++ b/res/drawable/sidebar_background.xml
@@ -4,7 +4,7 @@
     <gradient android:startColor="#99999999" android:endColor="#99999999" android:angle="90.0" />
     
     <corners
-        android:topLeftRadius="8dip"
-        android:bottomLeftRadius="8dip"/>
+        android:radius="8dp"
+        android:bottomLeftRadius="8dp"/>
     
 </shape>
