--- a/res/layout/fragment_contact.xml
+++ b/res/layout/fragment_contact.xml
@@ -23,5 +23,12 @@
         android:layout_width="@dimen/contact_sidebar_width"
         android:layout_height="match_parent"
         android:layout_gravity="end|center" />
+    
+    <ProgressBar 
+        android:id="@+id/pb_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleLargeInverse"
+        android:layout_gravity="center"/>
 
 </FrameLayout>
