--- a/res/layout/activity_user_info.xml
+++ b/res/layout/activity_user_info.xml
@@ -54,10 +54,20 @@
                 android:textColor="@color/session_list_item_content"/>
             
             <TextView 
-                android:id="@+id/tv_email"
+                android:id="@+id/tv_realname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_nickname"
+                android:textSize="@dimen/contact_user_info_title"
+                android:textColor="@color/session_list_item_content"/>
+            
+            <TextView 
+                android:id="@+id/tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_realname"
+                android:clickable="true"
+                android:autoLink="email"
                 android:textSize="@dimen/contact_user_info_title"
                 android:textColor="@color/session_list_item_content"/>
         </RelativeLayout>
@@ -81,7 +91,7 @@
         <TextView 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:textSize="@dimen/contact_user_info_title"
             android:textStyle="bold"
             android:text="@string/contact_address"/>
@@ -90,14 +100,14 @@
             android:id="@+id/tv_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:singleLine="true"
             android:textSize="@dimen/contact_user_info_title"
             android:textColor="@color/session_list_item_content"/>
     </LinearLayout>
     
     <LinearLayout 
-        android:id="@+id/layout_signature"
+        android:id="@+id/layout_mobile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -106,24 +116,26 @@
         <TextView 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:textSize="@dimen/contact_user_info_title"
             android:textStyle="bold"
-            android:text="@string/contact_signature"/>
+            android:text="@string/contact_mobile"/>
         
         <TextView 
-            android:id="@+id/tv_signature"
+            android:id="@+id/tv_mobile"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
+            android:layout_weight="8"
             android:singleLine="true"
+            android:clickable="true"
+            android:autoLink="phone"
             android:textSize="@dimen/contact_user_info_title"
             android:textColor="@color/session_list_item_content"/>
     </LinearLayout>
     
     <Button 
-        android:id="@+id/btn_add_friend"
-       	android:layout_below="@id/layout_signature"
+        android:id="@+id/btn_opt"
+       	android:layout_below="@id/layout_mobile"
        	android:layout_marginTop="@dimen/login_vertical_margin"
         style="@style/CommonWidthButtonstyle"
         android:layout_marginLeft="@dimen/list_item_padding"
