--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,11 +7,10 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <View android:layout_width="match_parent"
+    <View
         android:id="@+id/divider"
         android:layout_above="@id/page_indicator"
-        android:layout_height="1dp"
-        android:background="#ababab"/>
+        style="@style/CommonDividerStyle"/>
     <android.support.v4.view.ViewPager
         android:layout_above="@id/divider"
         android:id="@+id/view_pager"
