--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -42,5 +42,8 @@
     <dimen name="contact_text_dialog">32sp</dimen>
     <dimen name="contact_text_index">14sp</dimen>
     
+    <dimen name="chat_edit_panel_padding">8dp</dimen>
+    <dimen name="chat_voice_btn_padding">8dp</dimen>
+    
 
 </resources>
