--- a/res/layout/activity_chat1.xml
+++ b/res/layout/activity_chat1.xml
@@ -6,7 +6,11 @@
     
     <ListView 
         android:id="@+id/lv_msgs"
-        style="@style/CommonListViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:cacheColorHint="@android:color/transparent"
+        android:listSelector="@android:color/transparent"
+        android:divider="@android:color/transparent"
         android:layout_weight="1"
         android:background="@color/contact_chat_list_bg"/>
     
