--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -136,4 +136,51 @@
         <item name="centered">true</item>
     </style>
     
+    <!-- 聊天item的rootLayout的样式 -->
+    <style name="ChatItemRootStyle">
+    	<item name="android:layout_width">match_parent</item>
+    	<item name="android:layout_height">match_parent</item>
+    	<item name="android:orientation">vertical</item>
+    	<item name="android:paddingTop">@dimen/chat_msg_item_padding</item>
+    	<item name="android:paddingBottom">@dimen/chat_msg_item_padding</item>
+    	<item name="android:descendantFocusability">blocksDescendants</item>
+    </style>
+    
+    <!-- 聊天item的时间提示样式 -->
+    <style name="ChatItemSpliteTimeStyle">
+        <item name="android:layout_width">wrap_content</item>
+    	<item name="android:layout_height">wrap_content</item>
+    	<item name="android:background">@drawable/chat_msg_time_background</item>
+    	<item name="android:layout_gravity">center_horizontal</item>
+    	<item name="android:gravity">center</item>
+    	<item name="android:padding">@dimen/chat_msg_item_time_padding</item>
+    	<item name="android:layout_marginTop">@dimen/chat_msg_item_time_margin_top</item>
+    	<item name="android:layout_marginBottom">@dimen/chat_msg_item_time_margin_bottom</item>
+    </style>
+    
+    <!-- 聊天用户头像样式 -->
+    <style name="ChatItemHeadIconStyle">
+        <item name="android:layout_width">@dimen/contact_item_head_icon_width</item>
+    	<item name="android:layout_height">@dimen/contact_item_head_icon_height</item>
+    	<item name="android:src">@drawable/ic_chat_default_big_head_icon</item>
+    </style>
+    
+    <!-- 聊天消息内容样式 -->
+    <style name="ChatItemContentStyle">
+        <item name="android:layout_width">wrap_content</item>
+    	<item name="android:layout_height">wrap_content</item>
+    	<item name="android:background">@drawable/chat_msg_in_selector</item>
+    	<item name="android:paddingBottom">@dimen/chat_msg_item_content_padding_top_bottom</item>
+    	<item name="android:paddingTop">@dimen/chat_msg_item_content_padding_top_bottom</item>
+    	<item name="android:textColor">@android:color/black</item>
+    	<item name="android:textSize">@dimen/contact_chat_msg</item>
+    </style>
+    
+    <!-- 聊天消息发送状态样式 -->
+    <style name="ChatItemSendStateStyle">
+        <item name="android:layout_width">wrap_content</item>
+    	<item name="android:layout_height">wrap_content</item>
+    	<item name="android:src">@drawable/chat_msg_state_sending</item>
+    </style>
+    
 </resources>
