构建了会话的数据库，并初步完成了底层数据库接口的访问

--- a/res/layout/item_contact.xml
+++ b/res/layout/item_contact.xml
@@ -26,8 +26,7 @@
 	        android:id="@+id/iv_head_icon"
 	        android:layout_width="@dimen/contact_item_head_icon_width"
 	        android:layout_height="@dimen/contact_item_head_icon_height"
-	        android:adjustViewBounds="true"
-	        android:scaleType="centerCrop"
+	        android:scaleType="centerInside"
 	        android:layout_centerVertical="true"
 	        android:src="@drawable/contact_head_icon_default"
 	        android:contentDescription="@null"/>
