--- a/res/layout/activity_chat1.xml
+++ b/res/layout/activity_chat1.xml
@@ -107,7 +107,7 @@
     <FrameLayout 
         android:id="@+id/layout_bottom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/contact_chat_bottom_layout"
         android:visibility="gone">
