添加了会话列表

--- a/res/layout/fragment_session_list.xml
+++ b/res/layout/fragment_session_list.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lv_session"
-    style="@style/CommonListViewStyle"
-    android:background="@android:color/white" >
+<FrameLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
+	<ListView
+	    android:id="@+id/lv_session"
+	    style="@style/CommonListViewStyle" />
+	
+	<include 
+	    layout="@layout/layout_empty"/>
+	
+	<include layout="@layout/layout_loading"/>
 
-</ListView>
+</FrameLayout>
