--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -41,6 +41,8 @@
     <dimen name="chat_msg_item_out_content_padding_right">10dp</dimen>
     <dimen name="chat_msg_item_send_state_margin_left_right">10dp</dimen>
     
+    <dimen name="empty_promit_text">22sp</dimen>
+    
     <dimen name="login_font_account">16sp</dimen>
     <dimen name="login_font_password">16sp</dimen>
     <dimen name="login_font_button">18sp</dimen>
