--- a/res/layout/layout_contact_head.xml
+++ b/res/layout/layout_contact_head.xml
@@ -5,7 +5,7 @@
     android:padding="@dimen/list_item_padding"
     android:orientation="horizontal" >
     
-    ]<ImageView
+    <ImageView
      	android:id="@+id/iv_head_icon"
 	    style="@style/ChatItemHeadIconStyle"
 	    android:layout_gravity="center_vertical"
