--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -45,6 +45,8 @@
     <dimen name="chat_msg_item_head_icon_width">40dp</dimen>
     <dimen name="chat_msg_item_head_icon_height">40dp</dimen>
     
+    <dimen name="album_list_bottom_padding">12dp</dimen>
+    
     <dimen name="empty_promit_text">22sp</dimen>
     
     <dimen name="login_font_account">16sp</dimen>
@@ -64,5 +66,7 @@
     <dimen name="contact_text_dialog">32sp</dimen>
     <dimen name="contact_text_index">14sp</dimen>
     <dimen name="contact_chat_msg">16sp</dimen>
+    
+    <dimen name="album_list_bottom_title">20sp</dimen>
     
 </resources>
