添加了相册

--- a/res/layout/item_photo.xml
+++ b/res/layout/item_photo.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_item"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:descendantFocusability="blocksDescendants"
+    android:layout_gravity="center"
+    android:padding="0dp" >
     
     <ImageView 
         android:id="@+id/iv_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:contentDescription="@null"
+        android:scaleType="fitXY"
         android:src="@drawable/ic_launcher"/>
     
     <View 
@@ -22,9 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:button="@drawable/album_checkbox_selector"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_gravity="top|end"
+        android:button="@drawable/album_checkbox_selector"/>
 
-</RelativeLayout>
+</FrameLayout>
