--- a/res/drawable/common_button_green_selector.xml
+++ b/res/drawable/common_button_green_selector.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/com_btn_focus" android:state_selected="true" />
-    <item android:drawable="@drawable/com_btn_pressed" android:state_pressed="true" />
-    <item android:drawable="@drawable/com_btn_focus" android:state_checked="true" />
-    <item android:drawable="@drawable/com_btn_unable" android:state_enabled="false" />
-    <item android:drawable="@drawable/com_btn_normal" />
+    <item android:drawable="@drawable/com_btn_green_pressed" android:state_selected="true" />
+    <item android:drawable="@drawable/com_btn_green_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/com_btn_green_disable" android:state_enabled="false" />
+    <item android:drawable="@drawable/com_btn_green_normal" />
 </selector>
