--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/album_take_pic_bg_selector" >
     
     <GridView 
         android:id="@+id/gv_photo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent"
-        android:verticalSpacing="2dp"
-        android:horizontalSpacing="2dp"
+        style="@style/CommonListViewStyle"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="1dp"
         android:gravity="center"
         android:stretchMode="columnWidth"
         android:fadingEdge="none"
         android:numColumns="3"/>
+    
+    <TextView 
+        android:id="@+id/tv_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:layout_alignParentTop="true"
+        android:textSize="@dimen/session_list_item_title"
+        android:padding="@dimen/album_list_time_vertical_spcaing"
+        android:background="@color/album_bottom_layout_bg"
+        android:visibility="gone"/>
     
     <ProgressBar 
         android:id="@+id/pb_loading"
@@ -23,20 +33,23 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"/>
     
-    <RelativeLayout 
+    <RelativeLayout
+        android:id="@+id/layout_bottom" 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#aa000000">
+        android:background="@color/album_bottom_layout_bg">
         <TextView 
             android:id="@+id/tv_all_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/album_list_bottom_padding"
             android:text="@string/album_all_photo"
-            android:textColor="@android:color/white"
+            android:textColor="@color/album_text_selector"
+            android:background="@drawable/album_all_pic_bg_selector"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:clickable="true"
             android:textSize="@dimen/album_list_bottom_title"/>
         <TextView 
             android:id="@+id/tv_preview"
@@ -46,7 +59,9 @@
             android:layout_alignParentEnd="true"
             android:padding="@dimen/album_list_bottom_padding"
             android:text="@string/album_preview_photo"
-            android:textColor="@android:color/white"
+            android:textColor="@color/album_text_selector"
+            android:enabled="false"
+            android:clickable="true"
             android:textSize="@dimen/album_list_bottom_title"/>
     </RelativeLayout>
 
