--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -46,6 +46,10 @@
     <dimen name="chat_msg_item_head_icon_height">40dp</dimen>
     
     <dimen name="album_list_bottom_padding">12dp</dimen>
+    <dimen name="album_action_bar_padding">10dp</dimen>
+    <dimen name="album_item_size">100dp</dimen>
+    <dimen name="album_list_top_spacing">30dp</dimen>
+    <dimen name="album_list_time_vertical_spcaing">4dp</dimen>
     
     <dimen name="empty_promit_text">22sp</dimen>
     
@@ -68,5 +72,6 @@
     <dimen name="contact_chat_msg">16sp</dimen>
     
     <dimen name="album_list_bottom_title">20sp</dimen>
+    <dimen name="album_action_bar_title">16sp</dimen>
     
 </resources>
