--- a/res/layout/activity_album.xml
+++ b/res/layout/activity_album.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:textSize="@dimen/session_list_item_title"
         android:padding="@dimen/album_list_time_vertical_spcaing"
-        android:background="@color/album_bottom_layout_bg"
+        android:background="@color/album_top_layout_bg"
         android:visibility="gone"/>
     
     <ProgressBar 
@@ -41,28 +41,20 @@
         android:background="@color/album_bottom_layout_bg">
         <TextView 
             android:id="@+id/tv_all_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/album_list_bottom_padding"
+            style="@style/AlbumBottomTitleStyle"
             android:text="@string/album_all_photo"
-            android:textColor="@color/album_text_selector"
             android:background="@drawable/album_all_pic_bg_selector"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:clickable="true"
-            android:textSize="@dimen/album_list_bottom_title"/>
+            android:clickable="true"/>
         <TextView 
             android:id="@+id/tv_preview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/AlbumBottomTitleStyle"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:padding="@dimen/album_list_bottom_padding"
             android:text="@string/album_preview_photo"
-            android:textColor="@color/album_text_selector"
             android:enabled="false"
-            android:clickable="true"
-            android:textSize="@dimen/album_list_bottom_title"/>
+            android:clickable="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
