--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,7 +9,8 @@
     
     <color name="album_text_normal">#ffffff</color>
     <color name="album_text_selected">#aaaaaa</color>
-    <color name="album_bottom_layout_bg">#AA000000</color>
+    <color name="album_top_layout_bg">#AA000000</color>
+    <color name="album_bottom_layout_bg">#EF2D3537</color>
     
     <color name="session_list_item_content">#999999</color>
     <color name="session_list_item_time">#99888888</color>
