--- a/res/layout/item_contact.xml
+++ b/res/layout/item_contact.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_catalog"
-        android:layout_margin="@dimen/list_item_padding">
+        android:padding="@dimen/list_item_padding">
         <ImageView 
 	        android:id="@+id/iv_head_icon"
 	        style="@style/ChatItemHeadIconStyle"
