初步完成了发送图片的功能

--- a/res/layout/activity_chat1.xml
+++ b/res/layout/activity_chat1.xml
@@ -6,6 +6,10 @@
     android:background="@color/contact_chat_list_bg">
     
     <!-- 聊天消息列表 -->
+    <!-- 
+            android:stackFromBottom="true"
+		android:transcriptMode="alwaysScroll"
+		 -->
     <ListView 
         android:id="@+id/lv_msgs"
         android:layout_width="match_parent"
@@ -14,6 +18,8 @@
         android:listSelector="@android:color/transparent"
         android:divider="@android:color/transparent"
         android:layout_weight="1"
+        android:stackFromBottom="true"
+		android:transcriptMode="normal"
         android:layout_marginLeft="@dimen/chat_msg_list_spacing_left_right"
         android:layout_marginStart="@dimen/chat_msg_list_spacing_left_right"
         android:layout_marginRight="@dimen/chat_msg_list_spacing_left_right"
